# donna2

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  DIRECTORY.md  FACTORY.md  Makefile  OBSERVABILITY_PLAN.md  README.md  app descriptions.md  audio-utils.js  browser-session.js  claude-voice.js  claude.md  drizzle.config.js  gemini-live.js  gemini-voice.js  index.js  macincloud-setup.sh  package-lock.json  package.json  playwright.config.js  playwright.config.ts  playwright.integration.config.ts  railway.toml  vercel.json  vitest.config.js  vitest.setup.js
pipecat/: .dockerignore  .env.example  Dockerfile  bot.py  bot_gemini.py  config.py  main.py  prompts.py  pyproject.toml  railway.toml  verify_apis.py
pipecat/assets/: typing.raw
pipecat/db/: __init__.py  client.py
pipecat/docs/: ARCHITECTURE.md  LEARNINGS.md
pipecat/flows/: __init__.py  gemini_tools.py  nodes.py  tools.py
pipecat/lib/: cache_cleanup.py  circuit_breaker.py  encryption.py  feature_flags.py  growthbook.py  phi.py  redis_client.py  sanitize.py  shared_state_phi.py  telnyx_audio.py
pipecat/migrations/: 003_conversation_quality.sql
pipecat/processors/: __init__.py  audio_preroll.py  conversation_director.py  conversation_tracker.py  emotion_tts.py  goodbye_gate.py  guidance_stripper.py  metrics_logger.py  patterns.py  quick_observer.py
pipecat/scripts/: audit_transcripts.py  rollout.sh  usage_stats.py
pipecat/serializers/: __init__.py  telnyx.py
pipecat/services/: __init__.py  audit.py  call_analysis.py  call_snapshot.py  caregivers.py  context_cache.py  context_trace.py  (+17 more)
(+834 files in other folders)
