[project]
name = "donna-pipecat"
version = "0.1.0"
requires-python = ">=3.12"
description = "Donna AI companion - Pipecat voice pipeline"
dependencies = [
    "pipecat-ai[anthropic,deepgram,elevenlabs,silero,websocket,runner]>=0.0.101",
    "pipecat-ai-flows>=0.0.22",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "google-genai>=1.0.0",
    "twilio>=9.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring real external services (DATABASE_URL, API keys)",
    "llm: tests requiring real LLM API calls (ANTHROPIC_API_KEY)",
    "llm_simulation: LLM-vs-LLM simulation tests (slow, requires ANTHROPIC_API_KEY)",
    "regression: conversation scenario regression tests (full pipeline simulation)",
]
